crates/jsonschema-macros/tests/ui/invalid_multiple_of_negative.rs
#[jsonschema::validator(schema = r#"{"multipleOf":-1}"#)]
struct InvalidMultipleOfNegativeValidator;

fn main() {}
